<resources>
    <string name="app_name">Car Quote 1K</string>

    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesion</string>
    <string name="register">Registrarse</string>
    <string name="login_desc">Login</string>
    <string name="register_title">REGISTRO</string>

    <string name="name">Ingrese su nombre</string>
    <string name="ced">Ingrese su cedula</string>
    <string name="code">Ingrese su codigo</string>
    <string name="password_repeat">Repita su contraseña</string>

    <string name="error_required_message">Este campo es obligatorio</string>
    <string name="error_ced">La cedula no es valida.</string>
    <string name="error_password">la longitud de la contraseña debe ser mínimo de 8 caracteres y debe incluir por lo menos 1 número, y un carácter especial</string>
    <string name="error_confirm_password">Las constraseñas no son iguales</string>

    <string name="option_sell">Vender vehiculo</string>
    <string name="option_buy">Comprar vehiculo</string>

    <string name="buy_title">Compra de vehiculos</string>

    <string name="sell_title">Venta de vehiculos</string>
    <string name="sell_option_text">Seleccione una opción</string>

    <string-array name="sell_options">
        <item>Registrar</item>
        <item>Consultar</item>
        <item>Actualizar</item>
        <item>Eliminar</item>
        <item>Cotizar</item>
    </string-array>

    <string name="car_code">Ingrese el código</string>
    <string name="car_brand">Ingrese la marca</string>
    <string name="car_model">Ingrese el modelo</string>
    <string name="car_year">Ingrese el año</string>
    <string name="car_price">Ingrese el precio</string>
    <string name="car_cylinder">Ingrese el cilindraje</string>
    <string name="car_country">Ingrese el país de origen</string>
    <string name="car_new">¿Es nuevo?</string>
    <string name="car_km">Kilometraje</string>
    <string name="car_owner">¿Dueño unico?</string>
    <string name="car_btn_register">Registrar</string>
    <string name="car_btn_find">Buscar</string>
    <string name="car_btn_update">Actualizar</string>
    <string name="car_btn_delete">Eliminar</string>
    <string name="car_btn_quoter">Cotizar</string>

    <string name="quoter_title">Cotizador</string>

</resources>